modules/web-ui/deployment/cern-k8s/usquad/usquad-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: usquad-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: usquad
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usquad
spec:
  selector:
    matchLabels:
      app: usquad
  replicas: 3
  template:
    metadata:
      labels:
        app: usquad
    spec:
      containers:
      - name: usquad-web-ui
        image: ghcr.io/cmcrobotics/microsquad-web-ui:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: nginx-templates-config-volume
            mountPath: /etc/nginx/templates
          - name: usquad-config-volume
            mountPath: /usr/share/nginx/html/conf
      volumes:
        - name: nginx-templates-config-volume
          configMap:
            name: nginx-templates-config
        - name: usquad-config-volume
          configMap:  
            name: usquad-config
