modules/web-ui/deployment/cern-k8s/usquad/traefik-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http
  name: traefik
spec:
  rules:
  - host: usquad.cern.ch
    http:
      paths:
      - backend:
          service:
            name: usquad-service
            port:
              number: 8080
        path: /
        pathType: Prefix
